--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "stop-forever": "forever stop 0"
   },
   "dependencies": {
-    "form-data": "^4.0.0",
-    "node-fetch": "^3.2.3",
-    "telegraf": "^4.7.0"
+    "axios": "0.27.2",
+    "form-data": "4.0.0",
+    "node-fetch": "3.2.3",
+    "telegraf": "4.7.0"
   },
   "devDependencies": {
-    "dotenv-flow": "^3.2.0",
-    "forever": "^4.0.3",
-    "nodemon": "^2.0.19"
+    "dotenv-flow": "3.2.0",
+    "forever": "4.0.3",
+    "nodemon": "2.0.19"
   }
 }
