add restart always and version nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
+
 services:
   funpics-image-bot:
     build: .
     image: thealexcode/funpics-image-bot
-    container_name: funpics-image-bot
+    restart: always
     ports:
-      - "3001:80"
+      - 3001:80
