--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,13 @@ services:
     restart: always
     ports:
       - 3001:80
+    volumes:
+      - logs:/app/data/:rw
+
+volumes:
+  logs:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./data/
+      o: bind
